# tracker

./: .gitignore  CMakeLists.txt  IpCamera.cpp  IpCamera.h  config.h  helpers.cpp  helpers.h  main.cpp
cam_ctl/: CamCtl.cpp  CamCtl.h
gsoap/custom/: duration.c  float128.c  int128.c  long_double.c  long_time.c  qdate.cpp  qdatetime.cpp  qstring.cpp  qtime.cpp  struct_timeval.c
gsoap/extras/: ckdbtest.c
gsoap/import/: WS-example.c
gsoap/plugin/: httpdatest.c  wsseapi.h
gsoap/samples/async/: asyncrest.cpp  asyncrest3.c
gsoap/samples/calc/: calcclient.c
gsoap/samples/curl/: curlrest.c
gsoap/samples/dom/: dom2calc.cpp  domcpp.cpp
gsoap/samples/factory/: factory.cpp
gsoap/samples/factorytest/: factorytest.cpp
gsoap/samples/gmt/: gmtclient.cpp
gsoap/samples/httpcookies/: ckclient.cpp
gsoap/samples/lu/: luclient.cpp  lumat.cpp  luserver.cpp
gsoap/samples/oneway/: event.c  handler.c
gsoap/samples/rest/: httpposttest.c  person.c
gsoap/samples/roll/: rollserver.cpp
gsoap/samples/router/: router.c
gsoap/samples/testmsgr/: testmsgr.cpp
gsoap/samples/udp/: udpclient.c
gsoap/samples/webserver/: webserver.c
gsoap/samples/wsa/: wsademo.c
gsoap/samples/xml-rpc-json/: json.h  xml-rpc-currentTimeServer.cpp  xml-rpc-io.cpp
helpers/: base64_encode.cpp  helpers.h
onvif/: soapAdvancedSecurityServiceBindingProxy.cpp  soapAdvancedSecurityServiceBindingProxy.h  soapDeviceBindingProxy.cpp  soapDeviceBindingProxy.h  soapDeviceIOBindingProxy.cpp  soapDeviceIOBindingProxy.h  soapImagingBindingProxy.cpp  soapImagingBindingProxy.h  soapMediaBindingProxy.cpp  soapMediaBindingProxy.h  soapPTZBindingProxy.cpp  soapPTZBindingProxy.h  soapPullPointSubscriptionBindingProxy.cpp  soapPullPointSubscriptionBindingProxy.h  soapRemoteDiscoveryBindingProxy.cpp  soapRemoteDiscoveryBindingProxy.h  soapStub.h  soapwsddProxy.cpp  soapwsddProxy.h  wsddC.cpp  wsddClient.cpp  wsddH.h  wsddServer.cpp  wsddStub.h
onvif/gsoap/Symbian/: interop2.nsmap  interop2Btest.cpp  interop2Ctest.cpp  interop2test.cpp
onvif/gsoap/TandemNonStop/: client.c  server.c
onvif/gsoap/custom/: chrono_duration.cpp  chrono_time_point.cpp  qbytearray_base64.cpp  qbytearray_hex.cpp  struct_tm.c  struct_tm_date.c
onvif/gsoap/plugin/: httpgettest.c  httpmd5test.c  wsaapi.h  wsse2api.h  wsseapi-lite.h
opencv/: Overlay.cpp  Overlay.h
opencv/roi/: Roi.cpp  Roi.h
opencv/tracker/: Tracker.cpp  Tracker.h
services/: DeviceService.cpp  DeviceService.h  MediaService.cpp  MediaService.h  Service.cpp  Service.h
services/include/: ClientDevice.h  ClientImaging.h  ClientMedia.h  ClientPTZ.h
services/src/: ClientDevice.cpp  ClientImaging.cpp  ClientMedia.cpp  ClientPTZ.cpp
web_server/: WebServer.cpp  WebServer.h
web_server/responder/: Responder.cpp  Responder.h
web_server/websocketpp/: close.hpp  connection.hpp  endpoint.hpp  error.hpp  frame.hpp  server.hpp  uri.hpp  utf8_validator.hpp  utilities.hpp
web_server/websocketpp/common/: asio.hpp  chrono.hpp  connection_hdl.hpp  functional.hpp  memory.hpp  network.hpp  random.hpp  system_error.hpp  thread.hpp  type_traits.hpp
web_server/websocketpp/concurrency/: basic.hpp
web_server/websocketpp/config/: asio.hpp  asio_client.hpp  asio_no_tls.hpp  (+8 more)
(+118 files in other folders)
